--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -47,7 +47,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          TOKEN: ${{ secrets.TOKEN }} # GitHub automatically provides this token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub automatically provides this token
         with:
           tag_name: ${{ github.ref }} # Use the tag that triggered the workflow
           release_name: Release ${{ github.ref }}
@@ -57,7 +57,7 @@ jobs:
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
-          TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # URL from the create-release step
           asset_path: build/app/outputs/flutter-apk/app-release.apk
