--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -2,11 +2,8 @@ name: Build Flutter App
 
 on:
   push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -37,17 +34,11 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      - name: Upload APK as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-          
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub automatically provides this token
+          GITHUB_TOKEN: ${{ secrets.PAT }} # Use the PAT here
         with:
           tag_name: ${{ github.ref }} # Use the tag that triggered the workflow
           release_name: Release ${{ github.ref }}
@@ -57,7 +48,7 @@ jobs:
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }} # Use the PAT here
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # URL from the create-release step
           asset_path: build/app/outputs/flutter-apk/app-release.apk
