--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -2,8 +2,11 @@ name: Build Flutter App
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   build:
