--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -37,23 +37,14 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }} # Use the default GITHUB_TOKEN or a PAT
-        with:
-          tag_name: ${{ github.MediaPad }} # Use the tag name (e.g., v1.0.0)
-          release_name: Release ${{ github.MediaPad }}
-          draft: false
-          prerelease: false
+      - name: Get Version Name
+        run: echo "VERSION_NAME=$(grep 'version:' pubspec.yaml | cut -d ' ' -f 2)" >> $GITHUB_ENV
 
-      - name: Upload APK to Release
-        uses: actions/upload-release-asset@v1
+      - name: Upload APK to GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # URL from the create-release step
-          asset_path: build/app/outputs/flutter-apk/app-release.apk
-          asset_name: app-release.apk
-          asset_content_type: application/vnd.android.package-archive
+        run: |
+          APK_PATH=build/app/outputs/flutter-apk/app-release.apk
+          TAG_NAME="v${{ env.VERSION_NAME }}"
+          RELEASE_NAME="Release ${{ env.VERSION_NAME }}"
+          gh release create "$TAG_NAME" "$APK_PATH" --title "$RELEASE_NAME" --notes "New release of MediaPad."
